Footer alignment fix

--- a/services/homepage/src/styles/styles.scss
+++ b/services/homepage/src/styles/styles.scss
@@ -873,6 +873,7 @@ ul
     padding-bottom: 40px;
     border-top: 1px solid rgba(255, 255, 255, .16);
     display: flex;
+    align-items: center;
     .copyWrite {
       display: flex;
       align-items: center;
